<resources>
    <string name="app_name">Fat2Fit</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_name">Welcome back, %1$s!</string>
    <string name="welcome_sub">Future you will thank you.</string>
    <string name="get_started">Let\'s get started!</string>
    <string name="in_week">You\'re in week %1$d</string>
    <string name="title_activity_plan">PlanActivity</string>
    <string name="bmi">BMI</string>
    <string name="target_calories">Target Calories</string>
    <string name="recommended_exercises">Recommended Activities</string>
    <string name="percent_carbs">%1$d%% carbs</string>
    <string name="percent_fats">%1$d%% fats</string>
    <string name="percent_protein">%1$d%% protein</string>
    <string name="number_target_calories">%1$d kcal</string>
    <string name="enter_password">Enter password</string>
    <string name="enter">Enter</string>
    <string name="water_target">Target: %1$.1fl</string>
    <string name="drank">I drank: </string>
    <string name="water_units">ml</string>
    <string name="add_water">Add it!</string>
    <string name="water_so_far">You\'ve drunk %1$.1fl of %2$.1fl.</string>
    <string name="no_water_value">Please enter a value for the amount of water you\'ve drunk.</string>
    <string name="water_balance_day">Your water balance resets each day.</string>
    <string name="water_balance_motivate">Hit your target to help reach your goals!</string>
</resources>
