<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_standard"
    tools:context=".WaterActivity">

    <TextView
        android:id="@+id/target_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/water_daily_textview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/water_target"
        style="@style/TextAppearance.AppCompat.Headline"/>

    <TextView
        android:id="@+id/water_daily_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/target_textview"
        app:layout_constraintBottom_toTopOf="@id/water_motivate"
        android:text="@string/water_balance_day"
        android:layout_marginTop="@dimen/margin_standard"/>

    <TextView
        android:id="@+id/water_motivate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/water_daily_textview"
        app:layout_constraintBottom_toTopOf="@id/drop_imageview"
        android:text="@string/water_balance_motivate"/>

    <ImageView
        android:id="@+id/drop_imageview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/water_motivate"
        app:layout_constraintBottom_toTopOf="@id/so_far_textview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/margin_standard"/>

    <TextView
        android:id="@+id/so_far_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/drank_textview"
        app:layout_constraintTop_toBottomOf="@id/drop_imageview"
        android:layout_marginTop="@dimen/margin_standard"
        android:text="@string/water_so_far"/>

    <TextView
        android:id="@+id/drank_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/so_far_textview"
        app:layout_constraintBottom_toTopOf="@id/water_edittext"
        android:layout_marginTop="@dimen/margin_standard"
        android:text="@string/drank"
        style="@style/TextAppearance.AppCompat.Subhead"/>

    <EditText
        android:id="@+id/water_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/drank_textview"
        app:layout_constraintBottom_toTopOf="@id/add_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/margin_standard"/>

    <TextView
        android:id="@+id/unit_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/water_edittext"
        app:layout_constraintBottom_toBottomOf="@id/water_edittext"
        android:text="@string/water_units"/>

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/water_edittext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/add_water"
        android:layout_marginTop="@dimen/margin_standard"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_standard"/>

</android.support.constraint.ConstraintLayout>