<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlanActivity"
    tools:showIn="@layout/activity_plan"
    android:padding="@dimen/margin_standard">

    <TextView
        android:id="@+id/calories_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/macro_imageview"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:text="@string/target_calories"/>

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/macro_imageview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/target_calories_textview"
        app:layout_constraintTop_toBottomOf="@id/calories_textview"
        app:layout_constraintBottom_toTopOf="@id/bmi_textview"
        android:layout_marginTop="@dimen/margin_standard"/>

    <TextView
        android:id="@+id/target_calories_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/macro_imageview"
        app:layout_constraintBottom_toBottomOf="@id/macro_imageview"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/macro_imageview"
        android:layout_marginLeft="@dimen/margin_standard"
        style="@style/TextAppearance.AppCompat.Headline"
        android:text="@string/number_target_calories"/>
    
    <View
        android:id="@+id/protein_legend"
        android:layout_width="@dimen/legend"
        android:layout_height="@dimen/legend"
        app:layout_constraintLeft_toRightOf="@id/macro_imageview"
        app:layout_constraintBottom_toBottomOf="@id/macro_imageview"
        android:layout_marginLeft="@dimen/margin_standard"
        android:background="@color/yellow"
        />

    <TextView
        android:id="@+id/protein_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/protein_legend"
        android:layout_marginLeft="@dimen/margin_small"
        app:layout_constraintBottom_toBottomOf="@id/protein_legend"
        android:text="@string/percent_protein"
        />

    <View
        android:id="@+id/fats_legend"
        android:layout_width="@dimen/legend"
        android:layout_height="@dimen/legend"
        app:layout_constraintBottom_toTopOf="@id/protein_legend"
        app:layout_constraintLeft_toLeftOf="@id/protein_legend"
        android:layout_marginBottom="@dimen/margin_small"
        android:background="@color/blue"
        />

    <TextView
        android:id="@+id/fats_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/fats_legend"
        app:layout_constraintBottom_toBottomOf="@id/fats_legend"
        android:layout_marginLeft="@dimen/margin_small"
        android:text="@string/percent_fats"/>

    <View
        android:id="@+id/carbs_legend"
        android:layout_width="@dimen/legend"
        android:layout_height="@dimen/legend"
        app:layout_constraintLeft_toLeftOf="@id/fats_legend"
        app:layout_constraintBottom_toTopOf="@id/fats_legend"
        android:layout_marginBottom="@dimen/margin_small"
        android:background="@color/red"
        />

    <TextView
        android:id="@+id/carbs_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/carbs_legend"
        android:layout_marginLeft="@dimen/margin_small"
        app:layout_constraintBottom_toBottomOf="@id/carbs_legend"
        android:text="@string/percent_carbs"/>

    <TextView
        android:id="@+id/bmi_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/macro_imageview"
        app:layout_constraintBottom_toTopOf="@id/bmi_scale_imageview"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/bmi"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_marginTop="@dimen/margin_standard"
        />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/bmi_scale_imageview"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/bmi_textview"
        app:layout_constraintBottom_toTopOf="@id/activities_textview"
        android:layout_marginTop="@dimen/margin_standard"
        />

    <TextView
        android:id="@+id/activities_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bmi_scale_imageview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/activity_image_1"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:text="@string/recommended_exercises"
        android:layout_marginTop="@dimen/margin_standard"/>

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/activity_image_1"
        android:layout_width="0dp"
        android:layout_height="@dimen/exercise"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/activity_image_2"
        app:layout_constraintTop_toBottomOf="@id/activities_textview"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/margin_standard"
        android:background="@color/colorAccent"
        />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/activity_image_2"
        android:layout_width="0dp"
        android:layout_height="@dimen/exercise"
        app:layout_constraintLeft_toRightOf="@id/activity_image_1"
        app:layout_constraintRight_toLeftOf="@id/activity_image_3"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="@dimen/margin_standard"
        android:background="@color/colorAccent" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/activity_image_3"
        android:layout_width="0dp"
        android:layout_height="@dimen/exercise"
        app:layout_constraintLeft_toRightOf="@id/activity_image_2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="@dimen/margin_standard"
        android:background="@color/colorAccent" />


</android.support.constraint.ConstraintLayout>